-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
eb09f9b82c249db096754d9cbeea3424149c1869
I am running moc from qtbase a5fa0cf98cdedd6dc3488b590499b0b4387747dc.
I had an issue with my source file causing an infinite loop in moc.
I boiled it down to the attached file. The issue seems to be the malformed macro usage.
If I close the macro parentheses everything works fine.
| For Gerrit Dashboard: QTBUG-29308 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 47675,4 | moc: Error out when detecting unterminated macro usage | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 48343,2 | moc: Error out when detecting unterminated macro usage | stable | qt/qtbase | Status: MERGED | +2 | 0 |