moc: Error out when detecting unterminated macro usage

Exhausting the symbol list while looking for the
final right parenthesis means it is missing.

Task-number: QTBUG-29308
Change-Id: Iccf5897b0f5eb719699fd12d6c8e4a16ff189d9b
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>

cregit: eb09f9b82c249db096754d9cbeea3424149c1869 https://github.com/qt/qtbase/commit/eb09f9b82c249db096754d9cbeea3424149c1869