tests/auto/tools/moc/unterminated-function-macro.h
@@ -1,0 +1,2 @@
+DECL|function|foo
+DECL|macro|MACRO
